--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,3 +1,6 @@
+# syntax=docker/dockerfile:1
+
+# Build the application from source
 FROM golang:1.24-alpine  AS build
 RUN apk add --no-cache git
 
@@ -10,8 +13,8 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
     go build -ldflags="-s -w" -o server .
 
-FROM alpine:latest
-RUN apk add --no-cache ca-certificates
+# Deploy the application binary into a lean image
+FROM gcr.io/distroless/base-debian11 AS build-release-stage
 
 WORKDIR /app
 COPY --from=build /src/server .
